_sass/components/_DGAdigitalStamp.scss
@use '../mixins' as *;

/* ========================================
   DGA DROPDOWN STYLES
   ======================================== */
#nds-digitalStamp-verify-text {
    line-height: normal;
}

.nds-digitalStamp-tab {
    z-index: 10;
    cursor: pointer;
    font-size: var(--typo-text-clamp-sm-FS);
    line-height: var(--typo-text-clamp-sm-LH);
    font-weight: var(--font-weight-medium);
    text-align: start;
    padding-inline: 0;
    gap: var(--spacing-xs);
}

.nds-digitalStamp-tab {
    .nds-flag {
        width: 20px;
        margin-inline-end: var(--spacing-xs);
    }

}

@include desktop(min) {
    .nds-digitalStamp-tab>.nds-digitalStamp-sm-text {
        display: none!important;
    }
}

@include tablet(max) {
    .nds-digitalStamp-tab>.nds-digitalStamp-lg-text {
        display: none!important;
    }

}


#nds-digitalStamp {
    background-color: var(--background-topbar);
    position: relative;
    transition: grid-template-rows var(--nds-transition);
    grid-template-rows: 0fr;
    overflow: clip;
    &[data-state~="open"] {
        display: grid;
        grid-template-rows: 1fr;
    }

    &:is([data-state~="opening"], [data-state~="closing"]) {
        grid-template-rows: 0fr;
    }

    >* {
        grid-row: 1 / span 2;
    }


}

.nds-digitalStamp-notices {
    margin-block: var(--spacing-5xl);
    display: flex;
    gap: var(--spacing-xl);
    flex-wrap: wrap;
}

.nds-digitalStamp-card {
    flex: 1;
    min-width: 300px;
    display: flex;
    align-items: flex-start;
    gap: var(--spacing-xl);
}

.nds-digitalStamp-register {
    width: 100%;
    margin: 0 auto;
    background-color: var(--background-card);
    border-radius: var(--radius-md);
    padding: var(--spacing-xl) var(--spacing-3xl);
    margin-block: var(--spacing-5xl);
    line-height: 24px;
    text-align: start;
    display: flex;
    gap: var(--spacing-sm);
    flex: 0 0 100%;
    justify-content: start;
    align-items: center;
}

.nds-digitalStamp-register>img {
    height: 30px;
    margin-inline-end: var(--spacing-2xl);
}

.nds-digitalStamp-icon {
    position: relative;
    border: 1px solid var(--border-primary);
    border-radius: 50%;
    width: var(--spacing-6xl);
    height: var(--spacing-6xl);
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;

    @include tablet(max) {
        width: var(--spacing-4xl);
        height: var(--spacing-4xl);
        font-size: 1rem;
    }

}

.nds-digitalStamp-icon>:is(.nds-icon, i) {
    color: var(--icon-primary);
}

.nds-digitalStamp-content {
    flex: 1;
}

.nds-digitalStamp-heading {
    font-size: var(--typo-text-clamp-lg-FS);
    line-height: var(--typo-text-clamp-lg-LH);
    font-weight: var(--font-weight-semibold);
    color: var(--text-default);
    margin-bottom: var(--spacing-md);
}

.nds-digitalStamp-description {
    color: var(--text-default);
    line-height: 1.5;
}

@include mobile {

    .nds-digitalStamp-notices {
        flex-direction: column;
        gap: var(--spacing-lg);
    }

    .nds-digitalStamp-card {
        gap: var(--spacing-lg);
    }

    .nds-digitalStamp-heading {
        font-size: var(--typo-text-md-FS);
        line-height: var(--typo-text-md-LH);
    }

    .nds-digitalStamp-description {
        font-size: var(--typo-text-sm-FS);
        line-height: var(--typo-text-sm-LH);
    }

}

#nds-digitalStamp-verify-text{
    color: var(--text-primary-strong);
}

.nds-digitalStamp-highlight {
    color: var(--text-primary);
    font-weight: var(--font-weight-bold);
}


/*Hero Section*/

.nds-hero-section img {
    pointer-events: none
}

